--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -7,18 +8,80 @@
     <meta name="description" content="A private, encrypted journaling app for mental health support">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    
+
     <title>AI Journal</title>
-    
+
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/svg+xml" href="icons/icon.svg">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <div id="app">
+        <!-- Authentication View -->
+        <section id="view-auth" class="view auth-view">
+            <div class="auth-container">
+                <div class="auth-header">
+                    <span class="app-icon-large">🌙</span>
+                    <h1>AI Journal</h1>
+                    <p class="auth-subtitle">Your private, encrypted journaling space</p>
+                </div>
+
+                <div class="auth-forms">
+                    <!-- Login Form -->
+                    <div id="login-form" class="auth-form active">
+                        <h2>Welcome Back</h2>
+                        <div class="form-group">
+                            <label for="login-username">Username</label>
+                            <input type="text" id="login-username" autocomplete="username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="login-pin">PIN</label>
+                            <input type="tel" id="login-pin" pattern="[0-9]{4,6}" maxlength="6" autocomplete="off"
+                                inputmode="numeric" required>
+                            <small>4-6 digits</small>
+                        </div>
+                        <div id="login-error" class="error-message hidden"></div>
+                        <button id="btn-login" class="btn btn-primary full-width">Login</button>
+                        <p class="auth-switch">
+                            Don't have an account?
+                            <a href="#" id="show-register">Create one</a>
+                        </p>
+                    </div>
+
+                    <!-- Register Form -->
+                    <div id="register-form" class="auth-form hidden">
+                        <h2>Create Account</h2>
+                        <div class="form-group">
+                            <label for="register-username">Username</label>
+                            <input type="text" id="register-username" autocomplete="username" required>
+                            <small>3-20 characters, alphanumeric</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="register-pin">PIN</label>
+                            <input type="tel" id="register-pin" pattern="[0-9]{4,6}" maxlength="6" autocomplete="off"
+                                inputmode="numeric" required>
+                            <small>4-6 digits</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="register-pin-confirm">Confirm PIN</label>
+                            <input type="tel" id="register-pin-confirm" pattern="[0-9]{4,6}" maxlength="6"
+                                autocomplete="off" inputmode="numeric" required>
+                        </div>
+                        <div id="register-error" class="error-message hidden"></div>
+                        <button id="btn-register" class="btn btn-primary full-width">Create Account</button>
+                        <p class="auth-switch">
+                            Already have an account?
+                            <a href="#" id="show-login">Login</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Header -->
-        <header class="app-header">
+        <header class="app-header hidden">
             <div class="header-left">
                 <span class="app-icon">🌙</span>
                 <h1 class="app-title">AI Journal</h1>
@@ -30,11 +93,14 @@
                 <button id="btn-settings" class="nav-btn" aria-label="Settings">
                     <span class="icon">⚙️</span>
                 </button>
+                <button id="btn-logout" class="nav-btn" aria-label="Logout">
+                    <span class="icon">🚪</span>
+                </button>
             </nav>
         </header>
 
         <!-- Main Content Area -->
-        <main id="main-content">
+        <main id="main-content" class="hidden">
             <!-- Entry List View (default) -->
             <section id="view-list" class="view active">
                 <div class="search-bar">
@@ -64,9 +130,8 @@
                     <button class="mood-dismiss" aria-label="Dismiss mood selector">Skip</button>
                 </div>
                 <div class="editor-container">
-                    <textarea id="entry-textarea" 
-                              placeholder="Write your thoughts..." 
-                              aria-label="Journal entry"></textarea>
+                    <textarea id="entry-textarea" placeholder="Write your thoughts..."
+                        aria-label="Journal entry"></textarea>
                 </div>
                 <div class="editor-footer">
                     <span id="word-count" class="word-count">0 words</span>
@@ -139,4 +204,5 @@
     <!-- Scripts -->
     <script type="module" src="js/app.js"></script>
 </body>
+
 </html>
