chore: cleaning up network

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                 <div class="editor-footer">
                     <span id="word-count" class="word-count">0 words</span>
                     <div class="editor-actions">
+                        <button id="btn-ai-prompt" class="btn btn-secondary" title="Get AI writing prompt">
+                            <span>✨ AI Prompt</span>
+                        </button>
                         <button id="btn-cancel" class="btn btn-secondary">Cancel</button>
                         <button id="btn-save" class="btn btn-primary">Save ✓</button>
                     </div>
